# wpli_pipeline

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  test_import.py
.pytest_cache/v/cache/: nodeids
configs/: example.yaml
notebooks/: demo.ipynb
results/demo/: config.json  wpli_arrays.npz  wpli_edges.csv
results/demo_wpli_trial_shuffle/: config.json  wpli_arrays.npz  wpli_edges.csv
scripts/: run_demo.py
src/wpli_pipeline/: __init__.py  cli.py  connectivity.py  pipeline.py  plotting.py  simulate.py  stats.py  surrogates.py
tests/: test_connectivity.py  test_estimators_on_sims.py  test_import.py  test_pipeline.py  test_stats.py  test_surrogates.py
