[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpli_pipeline"
version = "0.0.1"
description = "wPLI phase-connectivity pipeline (work in progress)."
authors = [{ name = "Anna" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

